IE issue for word wrap

--- a/webroot/css/styles.less
+++ b/webroot/css/styles.less
@@ -6293,10 +6293,9 @@ img {
 						a {
 							color: rgba(0,0,0,.5);
 							text-decoration: none;
-                                                        word-wrap: break-word;
-							&:hover {
-								word-wrap: break-word;
-								text-decoration: underline;
+                                                        
+                                                        &:hover {
+                                                            text-decoration: underline;
 							}
 							
 						}
